<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlClima"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    android:padding="@dimen/padding_layout"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvLatitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_latitud"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etLatitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvLatitud"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="-7dp"
        android:layout_toEndOf="@+id/tvLatitud"
        android:ems="10"
        android:hint="@string/et_latitud_hint"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tvLongitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvLatitud"
        android:layout_alignParentTop="true"
        android:layout_marginTop="102dp"
        android:text="@string/tv_longitud"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etLongitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvLongitud"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="-6dp"
        android:ems="10"
        android:hint="@string/et_longitud_hint"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="182dp"
        android:text="@string/btn_consultar"
        android:textStyle="bold" />

</RelativeLayout>